src/Components/Hero/Hero.css
.homemain {
  display: grid;
  grid-template-rows: 1fr 50px 70px;
  grid-template-columns: repeat(11, 1fr);
}
.homebox {
  height: 666px;
  width: 100vw;
  background-color: var(--nav-background);
  grid-row: 1/2;
  grid-column: 1 / -1;
}
.dots-container {
  height: 390px;
  grid-column: 2/3;
  grid-row: 2/-2;
  align-self: center;
}
.right-box img {
  height: auto;
  width: 40vw;
}

.bhagvat-heading {
  color: var(--nav-texthover-color);
  font-family: "Libre Baskerville", serif;
  font-size: 64px;
  font-weight: bold;
}

.H2-tag {
  color: var(--text-black);
  font-family: "Libre Baskerville", serif;
  font-size: 64px;
  line-height: normal;
}
.para-text {
  color: var(--para);
  font-size: 24px;
  font-family: "Roboto Flex", sans-serif;
  font-weight: 400;
}

.scroll-button {
  display: flex;

  justify-content: center;
  width: 194.634px;
  height: 50px;
  padding: 13px 24px;
  align-items: flex-start;
  gap: 8px;
  flex-shrink: 0;
  border-radius: 25.5px 0px;
  border: 2px solid #ff4500;
  font-family: "Roboto Flex", sans-serif;
  font-weight: 500;
  font-size: 20px;
}
.scroll-button span {
  line-height: 23px;
  color: var(--text-black);
}
@media screen and (max-width: 768px) {
  .right-box img {
    height: auto;
    width: 100vw;
  }
  .dots-container {
    position: absolute;
    visibility: hidden;
  }
  .homebox {
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
  }
  .bhagvat-heading {
    font-size: 48px;
    font-weight: bold;
  }
  .H2-tag {
    font-size: 48px;
  }
  .para-text {
    font-size: 15px;
  }
  .homemain {
    align-content: center;
  }
  .scroll-button {
    font-size: 12px;
    align-items: center;
    width: 180.33px;
    height: 40.62px;
  }
  .scroll-button span {
    line-height: 23px;
    color: var(--text-black);
  }
}

